Mon Apr  8 16:03:55 2013  Yuki Yugui Sonoda  <yugui@google.com>

	Fixes a build failure of ext/ripper/ripper.c on building out of place.
	* common.mk (id.h, id.c): Always generated in $(srcdir).
	(ext/ripper/ripper.c): Passes $(PATH_SEPARATOR) too to the sub make.

Mon Apr  8 12:05:02 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* object.c (rb_obj_ivar_set): call to_str for string only once.
	  to_str was called from rb_is_const_name and rb_to_id before.

	* object.c (rb_mod_const_set): ditto.

	* object.c (rb_mod_cvar_set): ditto.

Sun Apr  7 13:56:16 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_require.rb (TestRequire#test_require_nonascii_path):
	  RUBY_PLATFORM should escape as Regexp,
	  because RUBY_PLATFORM may contain '.'.

Sun Apr  7 10:44:01 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/defines.h: Simplify the logic to include sys/select.h.
	  This fixes a compilation error on Haiku (gcc2 and gcc4).

	* configure.in: Use shared linker as $(CC) for Haiku.
	  This fixes a build error on Haiku (gcc2).

Sun Apr  7 10:41:30 2013  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (MDNSOneShot#sender): Delete an unused variable.

Sun Apr  7 03:24:36 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* addr2line.c: use more generic type:
	  * u_char -> unsigned char
	  * u_short -> unsigned short
	  * u_int -> unsigned int
	  * u_long -> unsigned long
	  * quad_t -> int64_t
	  * u_quad_t -> uint64_t

	* addr2line.c (imax): inline is defined by configure.

Sun Apr  7 01:40:39 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el (ruby-electric-hash): New electric
	  function that expands a hash sign inside a string or regexp to
	  "#{}".

	* misc/ruby-electric.el (ruby-electric-curlies): Do not insert
	  spaces inside when the curly brace is a delimiter of %r, %w,
	  etc.

	* misc/ruby-electric.el (ruby-electric-curlies): Insert another
	  space before a closing curly brace when
	  ruby-electric-newline-before-closing-bracket is nil.
