@@ -4078,6 +4078,7 @@ fole_missing(int argc, VALUE *argv, VALUE self)
     ID id;
     const char* mname;
     int n;
+    rb_check_arity(argc, 1, UNLIMITED_ARGUMENTS);
     id = rb_to_id(argv[0]);
     mname = rb_id2name(id);
     if(!mname) {
@@ -4085,6 +4086,7 @@ fole_missing(int argc, VALUE *argv, VALUE self)
     }
     n = strlen(mname);
     if(mname[n-1] == '=') {
+        rb_check_arity(argc, 2, 2);
         argv[0] = rb_enc_str_new(mname, n-1, cWIN32OLE_enc);
 
         return ole_propertyput(self, argv[0], argv[1]);
